[package]
name = "cryptopals"
version = "0.1.0"
authors = ["andrewmorrow"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.3"
aes = "0.7.1"

[dev-dependencies]
hex-literal = "0.3.1"